tests/NormalTests/paczka2/big_fuzzy/12341027.err
Error in line 20: Xdf3f A608 114,48
Error in line 16: iGYp S654 15,1
Error in line 19: Xdf3f A608 34,9
Error in line 34: ZjIx7y2V A608 -1,4
Error in line 28: A608 A608 25,6
Error in line 38: iGYp A627 44,3
Error in line 51: Xdf3f S682 47,2
Error in line 55: mjChOYUIa A608 35,7
Error in line 57: mjChOYUIa A627 52,2
Error in line 52: iGYp S682 253,0
Error in line 71: A608 S654 71,1
Error in line 72: A608 A627 54,2
Error in line 88: Xdf3f A608 263,6
Error in line 94: A608 S654 41,3
Error in line 99: iGYp A627 93,6
Error in line 96: A608 S682 9,6
Error in line 114: Xdf3f S654 714,1
Error in line 105: mjChOYUIa A627 7,8
Error in line 122: A608 S654 13,93
Error in line 116: Xdf3f S682 15,4
Error in line 121: 1aywTIuBt A608 76,3
Error in line 118: iGYp S682 2,4
Error in line 127: A608 S654 5,1
Error in line 131: A608 A627 66,6
Error in line 139: iGYp A608 64,7
Error in line 141: mjChOYUIa S654 7,8
Error in line 145: ZjIx7y2V S654 7,9
Error in line 142: iGYp S682 32,4
Error in line 158: ZjIx7y2V A627 99,0
Error in line 157: Xdf3f S682 12,7
Error in line 153: iGYp S654 44,7
Error in line 172: mjChOYUIa S682 99,4
Error in line 176: mjChOYUIa S654 13,8
Error in line 180: A608 A608 22,8
Error in line 193: iGYp S654 84,6
Error in line 198: 1aywTIuBt S682 11,9
Error in line 202: A608 S682 36,2
Error in line 215: iGYp A608 83,4
Error in line 216: iGYp A627 12,7
Error in line 220: A608 A608 58,6
Error in line 223: A608 A627 96,0
Error in line 226: A608 S682 34,7
Error in line 232: ZjIx7y2V A627 51,0
Error in line 234: iGYp S654 0,1
Error in line 233: ZjIx7y2V S682 94,5
Error in line 236: ZjIx7y2V A627 34,8
Error in line 246: mjChOYUIa S654 24,3
